@@ -32,14 +32,13 @@ import static uk.gov.hmcts.reform.finrem.caseorchestration.TestConstants.AUTH_TO
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestSetUpUtils.caseDocument;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestSetUpUtils.defaultConsentedFinremCaseDetails;
 import static uk.gov.hmcts.reform.finrem.caseorchestration.TestSetUpUtils.document;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.util.TestResource.BINARY_URL;
+import static uk.gov.hmcts.reform.finrem.caseorchestration.util.TestResource.FILE_URL;
 
 @ActiveProfiles("test-mock-feign-clients-generic")
 public class ConsentOrderApprovedDocumentServiceV2Test extends BaseServiceTest {
 
     private static final String DEFAULT_COVERSHEET_URL = "defaultCoversheetUrl";
-    private static final String DOC_URL = "http://dm-store:8080/documents/d607c045-878e-475f-ab8e-b2f667d8af64";
-    private static final String BINARY_URL = DOC_URL + "/binary";
-    private static final String FILE_NAME = "app_docs.docx";
     private static final String CONSENT_ORDER_APPROVED_COVER_LETTER_URL = "consentOrderApprovedCoverLetterUrl";
 
     @Autowired
@@ -72,7 +71,7 @@ public class ConsentOrderApprovedDocumentServiceV2Test extends BaseServiceTest {
 
         FinremCaseDetails finremCaseDetailsTemp = documentHelper.deepCopy(finremCaseDetails, FinremCaseDetails.class);
         when(genericDocumentService.generateDocument(any(), any(), any(), any()))
-            .thenReturn(caseDocument(DOC_URL,documentApprovedConsentOrderFileName,BINARY_URL));
+            .thenReturn(caseDocument(FILE_URL, documentApprovedConsentOrderFileName, BINARY_URL));
         addConsentOrderApprovedDataToCaseDetails(finremCaseDetailsTemp);
         List<BulkPrintDocument> documents = consentOrderApprovedDocumentService
             .prepareApplicantLetterPack(finremCaseDetailsTemp, AUTH_TOKEN);
@@ -88,21 +87,19 @@ public class ConsentOrderApprovedDocumentServiceV2Test extends BaseServiceTest {
         FinremCaseDetails finremCaseDetailsTemp = documentHelper.deepCopy(finremCaseDetails, FinremCaseDetails.class);
         finremCaseDetailsTemp.getData().setPaperApplication(YesOrNo.YES);
         when(genericDocumentService.generateDocument(any(), any(), any(), any()))
-            .thenReturn(caseDocument(DOC_URL,documentApprovedConsentOrderFileName,BINARY_URL));
+            .thenReturn(caseDocument(FILE_URL, documentApprovedConsentOrderFileName, BINARY_URL));
         addConsentOrderApprovedDataToCaseDetails(finremCaseDetailsTemp);
         List<BulkPrintDocument> documents = consentOrderApprovedDocumentService
             .prepareApplicantLetterPack(finremCaseDetailsTemp, AUTH_TOKEN);
 
         assertThat(documents, hasSize(1));
-        assertThat(documents.get(0).getBinaryFileUrl(), is(BINARY_URL));
+        assertThat(documents.getFirst().getBinaryFileUrl(), is(BINARY_URL));
     }
 
     private void addConsentOrderApprovedDataToCaseDetails(FinremCaseDetails caseDetails) {
-
         ApprovedOrder.ApprovedOrderBuilder builder = ApprovedOrder.builder();
-        builder.orderLetter(caseDocument(DOC_URL, FILE_NAME, BINARY_URL));
-        builder.consentOrder(caseDocument(DOC_URL, FILE_NAME, BINARY_URL));
-
+        builder.orderLetter(caseDocument());
+        builder.consentOrder(caseDocument());
 
         List<PensionTypeCollection> pensionTypeCollections = new ArrayList<>();
         PensionType pensionType = PensionType.builder().typeOfDocument(PensionDocumentType.FORM_PPF1)
